<resources>
  <string name="app_name">Battarang</string>
  <string name="app_label">@string/app_name</string>

  <!-- Configurations -->

  <string name="notification_service">Notifier Service</string>

  <string name="label_device_name">Device Name</string>

  <string name="notify_when">Notify When</string>
  <string name="battery_level_reaches_template">Battery level reaches ~%</string>
  <string name="battery_level_slider">Slider for adjusting the battery level</string>
  <string name="battery_is_low_template">Battery is low</string>
  <string name="label_but">But Must</string>
  <string name="skip_if_display_on_template">Skip while display is on</string>

  <string name="unpair">Unpair</string>
  <string name="unpair_instruction">Tap &amp; Hold for a moment to Unpair</string>

  <string name="send_test_notification">Send a test notification</string>
  <string name="network_error">Network Failed!\nCheck if your internet is working.</string>

  <string name="about">About</string>

  <!-- Notification Service -->

  <string name="notifier_service_channel">Notifier Service</string>
  <string name="notifier_service_channel_description">It is safe to turn off or minimize this channel</string>

  <string name="service_notification_ticker">Started Battarang Notifier service</string>
  <string name="service_notification_content_title">Waiting for battery events</string>
  <string name="service_notification_content_text">This idle service is necessary to keep the notifier service running indefinitely. It\'s safe to minimize or turn off this notification from settings.</string>

  <string name="service_notification_channel_settings">Hide this notification</string>

  <!-- Pairing Dialog -->

  <string name="pair_with_device">Pair Receiver</string>
  <string name="pair_dialog_title">Choose one Receiver</string>
  <string name="telegram_bot">Telegram Bot</string>
  <string name="telegram_app_not_found">Telegram isn\'t installed. Try the other link.</string>
  <string name="pair_dialog_content">Select a receiver service to generate a pairing code and then scan or paste the code here.\n\nIf pairing is successful, you\'ll receive a confirmation on the receiver device.</string>
  <string name="pair_dialog_paste_button">Paste instead</string>
  <string name="pair_dialog_scan_button">Scan QR</string>

  <string name="invalid_token">Pairing code is invalid.\nMake sure it\'s correctly scanned or copied.</string>
  <string name="camera_unavailable">Can\'t open Camera.\nCopy the code manually and "Paste instead".</string>
  <string name="camera_permission_missing">You need to provide the camera permission from app settings.</string>
  <string name="quickie_overlay_string">Scan pairing code</string>

  <!-- Service Update Notification -->

  <string name="service_update_channel">Service Update</string>
  <string name="service_update_channel_description">Notifies when there\'s any critical update</string>

  <string name="notification_permission_rational_dialog_title">Notification should be enabled</string>
  <string name="notification_permission_rational_dialog_description">If there\'s a new app update or the Receiver becomes unpaired for any reason, Battarang won\'t be able to notify you without this permission.</string>

  <!-- Battery Optimization Request Dialog  -->
  <string name="optimization_exemption_title">Keep it Running</string>
  <string name="optimization_exemption_dialog">Automation apps like this are subject to battery optimization rules imposed by both device makers and Android itself.\n\nAs a result, your system may interrupt the notifier service from running indefinitely, even though it only waits for battery events without performing any actions.</string>
  <string name="optimization_exemption_button">Remove these Restrictions</string>

  <string name="remove_battery_restrictions_menu">Remove Battery Restrictions</string>

  <!-- Battery Restrictions Remover Sheet -->

  <string name="ignore_battery_optimization">Ignore Battery Optimization</string>
  <string name="ignore_battery_optimization_text">If your device is unused for a long period of time, the system may pause this service until the device is active again. You won\'t receive any notifications during that time if this permission is not given.</string>

  <string name="disable_app_hibernation">Disable App Hibernation</string>
  <string name="app_hibernation_text">If you don\'t open an app regularly, the system may pause it until you open it again. Since this is an automation app that doesn\'t require user interaction, it’s important to disable hibernation for this app.</string>

  <string name="allow_autostart">Allow Auto-start</string>
  <string name="allow_autostart_text">Some OEMs keep a whitelist of known apps that can resume their services after a phone restart. This service won\'t be able to restart if it\'s not allowed explicitly.</string>

  <string name="instruction">Allowing these should be sufficient for a consistent service. If it\'s not, please visit the Tutorial tab for more comprehensive step-by-step instructions.</string>

  <!-- About Sheet -->
  <string name="review">Review</string>
  <string name="battarang_notifier">Battarang Notifier</string>
  <string name="description">Sends battery notifications to</string>
  <string name="receiver">Receiver</string>
  <string name="or">or</string>
  <string name="telegram">Telegram</string>
  <string name="source">Source</string>
  <string name="issues">Issues</string>
  <string name="by">Designed &amp; Developed by</string>
  <string name="author_name">Nissan A.</string>
  <string name="author_country">🇧🇩</string>
  <string name="follow_on_twitter">Follow me on Twitter</string>
  <string name="connect_on_linkedin">Connect on LinkedIn</string>
  <string name="check_out">Check out my other projects</string>
  <string name="licenses">Licenses</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="tos">Terms of Service</string>
  <string name="no_browser_found">No browser found on the device to open the link.</string>
</resources>
