<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:scrollbars="vertical"
  >

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
      android:id="@+id/drag_handle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

    <com.google.android.material.imageview.ShapeableImageView
      android:layout_width="148dp"
      android:layout_height="148dp"
      android:layout_marginTop="8dp"
      android:alpha="0.1"
      android:contentDescription="@string/app_name"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo"
      app:tint="?colorPrimary"
      />

    <!--   Repurposing the monochrome app icon, so the margins are baked in.
           We are wrapping it in a CardView so that we can scale the icon inside the container. -->
    <com.google.android.material.card.MaterialCardView
      android:id="@+id/app_icon_card"
      android:layout_width="72dp"
      android:layout_height="72dp"
      app:cardBackgroundColor="?colorSurface"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/drag_handle"
      app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
      app:strokeWidth="0dp"
      >

      <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:srcCompat="@drawable/ic_launcher_monochrome"
        app:tint="?colorSecondary"
        />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/app_name_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/battarang_notifier"
      android:textAppearance="?textAppearanceHeadlineMedium"
      android:textColor="?colorSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_icon_card"
      />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/description_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/description"
      android:textAppearance="?textAppearanceBodyLarge"
      android:textColor="?colorSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_name_text"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/receiver_link_button"
      style="@style/Widget.Material3.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:minWidth="0dp"
      android:minHeight="0dp"
      android:padding="4dp"
      android:text="@string/receiver"
      android:textAppearance="?textAppearanceBodyLarge"
      android:textColor="?colorSecondary"
      app:icon="@drawable/ic_external_link"
      app:iconGravity="textEnd"
      app:iconSize="16dp"
      app:iconTint="?colorSecondary"
      app:layout_constraintEnd_toStartOf="@+id/or_text"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/description_text"
      tools:ignore="TouchTargetSizeCheck"
      />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/or_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="4dp"
      android:layout_marginTop="10dp"
      android:alpha="0.9"
      android:text="@string/or"
      android:textAppearance="?textAppearanceBodyLarge"
      android:textColor="?colorSecondary"
      app:layout_constraintEnd_toStartOf="@+id/telegram_link_button"
      app:layout_constraintStart_toEndOf="@+id/receiver_link_button"
      app:layout_constraintTop_toBottomOf="@+id/description_text"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/telegram_link_button"
      style="@style/Widget.Material3.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="7dp"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:minWidth="0dp"
      android:minHeight="0dp"
      android:padding="4dp"
      android:text="@string/telegram"
      android:textAppearance="?textAppearanceBodyLarge"
      android:textColor="?colorSecondary"
      app:icon="@drawable/ic_external_link"
      app:iconGravity="textEnd"
      app:iconSize="16dp"
      app:iconTint="?colorSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/or_text"
      app:layout_constraintTop_toBottomOf="@+id/description_text"
      tools:ignore="TouchTargetSizeCheck"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/source_link_button"
      style="@style/Widget.Material3.Button.TextButton"
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/source"
      android:textAppearance="?textAppearanceBodyLarge"
      android:textColor="?colorSecondary"
      app:icon="@drawable/ic_github"
      app:iconGravity="top"
      app:iconSize="36dp"
      app:iconTint="?colorSecondary"
      app:layout_constraintEnd_toStartOf="@+id/issues_link_button"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/receiver_link_button"
      app:shapeAppearance="?shapeAppearanceCornerExtraSmall"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/issues_link_button"
      style="@style/Widget.Material3.Button.TextButton"
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/issues"
      android:textAppearance="?textAppearanceBodyLarge"
      android:textColor="?colorSecondary"
      app:icon="@drawable/ic_feedback"
      app:iconGravity="top"
      app:iconSize="36dp"
      app:iconTint="?colorSecondary"
      app:layout_constraintEnd_toStartOf="@+id/review_link_button"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/source_link_button"
      app:layout_constraintTop_toBottomOf="@+id/receiver_link_button"
      app:shapeAppearance="?shapeAppearanceCornerExtraSmall"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/review_link_button"
      style="@style/Widget.Material3.Button.TextButton"
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:singleLine="false"
      android:text="@string/review"
      android:textAppearance="?textAppearanceBodyLarge"
      android:textColor="?colorSecondary"
      app:icon="@drawable/ic_play_store"
      app:iconGravity="top"
      app:iconSize="36dp"
      app:iconTint="?colorSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/issues_link_button"
      app:layout_constraintTop_toBottomOf="@+id/receiver_link_button"
      app:shapeAppearance="?shapeAppearanceCornerExtraSmall"
      />

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/author_details_card"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/review_link_button"
      app:strokeWidth="0dp"
      >

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/by_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/card_inset_horizontal"
          android:layout_marginTop="12dp"
          android:text="@string/by"
          android:textAppearance="?textAppearanceLabelMedium"
          android:textColor="?colorSecondary"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/flag_emoji_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/card_inset_horizontal"
          android:layout_marginTop="12dp"
          android:text="@string/author_country"
          android:textAppearance="?textAppearanceLabelMedium"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toEndOf="@+id/by_text"
          app:layout_constraintTop_toTopOf="parent"
          />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/author_name_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/card_inset_horizontal"
          android:layout_marginTop="4dp"
          android:text="@string/author_name"
          android:textAppearance="?textAppearanceHeadlineSmall"
          android:textColor="?colorPrimary"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/by_text"
          />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/author_website_link_button"
          style="@style/Widget.Material3.Button.TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="12dp"
          android:layout_marginTop="8dp"
          android:insetTop="0dp"
          android:insetBottom="0dp"
          android:minWidth="0dp"
          android:minHeight="0dp"
          android:padding="4dp"
          android:textAppearance="?textAppearanceBodyLarge"
          android:textColor="?colorSecondary"
          app:icon="@drawable/ic_external_link"
          app:iconGravity="textEnd"
          app:iconSize="16dp"
          app:iconTint="?colorSecondary"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/flag_emoji_text"
          app:shapeAppearance="?shapeAppearanceCornerSmall"
          tools:ignore="TouchTargetSizeCheck"
          tools:text="anissan.com"
          />

        <com.google.android.material.divider.MaterialDivider
          android:id="@+id/divider"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="16dp"
          android:layout_marginTop="8dp"
          android:alpha="0.7"
          app:dividerColor="?colorPrimary"
          app:dividerThickness="1.5dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/author_name_text"
          />

        <!-- Twitter -->
        <com.google.android.material.button.MaterialButton
          android:id="@+id/twitter_link_button"
          style="@style/Widget.Material3.Button.TextButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="start"
          android:insetLeft="0dp"
          android:insetTop="0dp"
          android:insetRight="0dp"
          android:insetBottom="0dp"
          android:paddingHorizontal="@dimen/card_inset_horizontal"
          android:paddingVertical="14dp"
          android:text="@string/follow_on_twitter"
          android:textAppearance="?textAppearanceBodyLarge"
          android:textColor="?colorSecondary"
          app:icon="@drawable/ic_twitter"
          app:iconGravity="end"
          app:iconTint="?colorSecondary"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/divider"
          app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"
          tools:ignore="VisualLintButtonSize"
          />

        <!--  LinkedIn -->
        <com.google.android.material.button.MaterialButton
          android:id="@+id/linkedin_link_button"
          style="@style/Widget.Material3.Button.TextButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="start"
          android:insetLeft="0dp"
          android:insetTop="0dp"
          android:insetRight="0dp"
          android:insetBottom="0dp"
          android:paddingHorizontal="@dimen/card_inset_horizontal"
          android:paddingVertical="14dp"
          android:text="@string/connect_on_linkedin"
          android:textAppearance="?textAppearanceBodyLarge"
          android:textColor="?colorSecondary"
          app:icon="@drawable/ic_linkedin"
          app:iconGravity="end"
          app:iconTint="?colorSecondary"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/twitter_link_button"
          app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"
          tools:ignore="VisualLintButtonSize"
          />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/check_out_app_link_button"
          style="@style/Widget.Material3.Button.TextButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="start"
          android:insetLeft="0dp"
          android:insetTop="0dp"
          android:insetRight="0dp"
          android:insetBottom="0dp"
          android:paddingHorizontal="@dimen/card_inset_horizontal"
          android:paddingVertical="14dp"
          android:text="@string/how_its_made"
          android:textAppearance="?textAppearanceBodyLarge"
          android:textColor="?colorSecondary"
          app:icon="@drawable/ic_external_link"
          app:iconGravity="end"
          app:iconTint="?colorSecondary"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/linkedin_link_button"
          app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"
          tools:ignore="VisualLintButtonSize"
          />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.helper.widget.Flow
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginVertical="8dp"
      app:constraint_referenced_ids="license_chip,policy_link_chip,tos_link_chip"
      app:flow_horizontalGap="8dp"
      app:flow_horizontalStyle="packed"
      app:flow_wrapMode="chain"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/author_details_card"
      />

    <com.google.android.material.chip.Chip
      android:id="@+id/license_chip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/licenses"
      android:textColor="?colorSecondary"
      app:chipIcon="@drawable/ic_copyright"
      app:chipIconTint="?colorSecondary"
      app:chipStrokeWidth="0dp"
      />

    <com.google.android.material.chip.Chip
      android:id="@+id/policy_link_chip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/privacy_policy"
      android:textColor="?colorSecondary"
      app:chipStrokeWidth="0dp"
      app:closeIcon="@drawable/ic_external_link"
      app:closeIconEnabled="true"
      app:closeIconTint="?colorSecondary"
      />

    <com.google.android.material.chip.Chip
      android:id="@+id/tos_link_chip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tos"
      android:textColor="?colorSecondary"
      app:chipStrokeWidth="0dp"
      app:closeIcon="@drawable/ic_external_link"
      app:closeIconEnabled="true"
      app:closeIconTint="?colorSecondary"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
